--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/static/game.js"></script>
+  <script src="/src/game.js"></script>
 </head>
 
 </html>
