--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/src/game.js"></script>
+<!--    <script src="src/scripts.js"></script> -->
 </head>
 
 </html>
