--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <html>
 
-<head>
-  
-  <title>The silent war of the atlantic</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <head>  
+    <title>The silent war of the atlantic</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <style type="text/css">
-    canvas{
-        margin: auto;
-        display: block;
-        border: 1px solid white;
-    }
+    <style type="text/css">
+      canvas{
+          margin: auto;
+          display: block;
+          border: 1px solid white;
+      }
 
-    body{
-        background-color: black;
-    }
-  </style>
+      body{
+          background-color: black;
+      }
+    </style>
 
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.52.0/dist/phaser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
 
-
-  <script src="//cdn.jsdelivr.net/npm/phaser@3.52.0/dist/phaser.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
-
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/src/game.js"></script>
-<!--    <script src="src/scripts.js"></script> -->
-</head>
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="module" src="/src/main.js"></script>
+    <script  src="/src/functions.js"></script>
+  </head>
 
 </html>
