--- a/client/index.html
+++ b/client/index.html
@@ -20,8 +20,8 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script type="module" src="/src/main.js"></script>
-    <script  src="/src/functions.js"></script>
+    <script type="module" src="/client/main.js"></script>
+    <script  src="/client/functions.js"></script>
   </head>
 
 </html>
