--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,8 @@
 
     <script src="//cdn.jsdelivr.net/npm/phaser@3.52.0/dist/phaser.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/phaser3-rex-plugins/templates/ui/ui-plugin.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser3-rex-plugins/plugins/inputtext-plugin.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="/client/main.js"></script>
     <script  src="/client/functions.js"></script>
