--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,8 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser3-rex-plugins/plugins/inputtext-plugin.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="/client/main.js"></script>
+    <script src="/client/lib/phaser.min.js" type="text/javascript"></script>  
+    <script src="/client/lib/rexuiplugin.min.js" type="text/javascript"></script>  
     <script  src="/client/functions.js"></script>
   </head>
 
