se agregan escenas de victoria, derrota, restart, y contador de vidas además de assets

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,8 @@
     <script src="/client/lib/phaser.min.js" type="text/javascript"></script>  
     <script src="/client/lib/rexuiplugin.min.js" type="text/javascript"></script>  
     <script  src="/client/functions.js"></script>
+    <script  src="/client/live-counter.js"></script>
+    <script  src="/client/restart-button.js"></script>
   </head>
 
 </html>
